<resources>
    <string name="app_name">UniversityOfThessaly</string>
    <string name="home_logo">Home Logo png</string>
    <string name="larisa_city">Λάρισα</string>
    <string name="volos_city">Βόλος</string>
    <string name="lamia_city">Λαμία</string>
    <string name="trikala_city">Τρίκαλα</string>
    <string name="karditsa_city">Καρδίτσα</string>
    <string name="larisa_biochemistry_biotechnology">Τμήμα Βιοχημείας και Βιοτεχνολογίας</string>
    <string name="larisa_medicine">Τμήμα Ιατρικής</string>
    <string name="larisa_nursery">Τμήμα Νοσηλευτικής</string>
    <string name="larisa_business_administration">Τμήμα Διοίκησης Επιχειρήσεων</string>
    <string name="larisa_accounting_and_finance">Τμήμα Λογιστικής και Χρηματοοικονομικής</string>
    <string name="larisa_environment">Τμήμα Περιβάλλοντος</string>
    <string name="larisa_energy_systems">Τμήμα Συστημάτων Ενέργειας</string>
    <string name="larisa_digital_systems">Τμήμα Ψηφιακών Συστημάτων</string>
    <string name="larisa_agriculture_agrotechnology">Τμήμα Γεωπονίας - Αγροτεχνολογίας</string>
    <string name="larisa_animal_production_science">Τμήμα Επιστήμης Ζωικής Παραγωγής</string>
    <string name="integb_larisa_business_administration">Συμβούλιο Ένταξης - Πρόγραμμα Σπουδών Τμήματος Διοίκησης Επιχειρήσεων</string>
    <string name="integb_larisa_electrical_engineering">Συμβούλιο Ένταξης - Πρόγραμμα Σπουδών Τμήματος Ηλεκτρολόγων Μηχανικών Τ.Ε.</string>
    <string name="integb_larisa_medical_labs">Συμβούλιο Ένταξης - Πρόγραμμα Σπουδών Τμήματος Ιατρικών Εργαστηρίων</string>
    <string name="integb_larisa_logistics">Συμβούλιο Ένταξης - Πρόγραμμα Σπουδών Τμήματος Λογιστικής και Χρηματοοικονομικής</string>
    <string name="integb_larisa_computer_science">Συμβούλιο Ένταξης - Πρόγραμμα Σπουδών Τμήματος Μηχανικών Πληροφορικής</string>
    <string name="integb_larisa_mechanical_engineering">Συμβλούλιο Ένταξης - Πρόγραμμα Σπουδών Τμήματος Μηχανολόγων Μηχανικών</string>
    <string name="integb_larisa_nursery">Συμβούλιο Ένταξης - Πρόγραμμα Σπουδών Τμήματος Νοσηλευτικής</string>
    <string name="integb_larisa_civil_engineering">Συμβούλιο Ένταξης - Πρόγραμμα Σπουδών Τμήματος Πολιτικών Μηχανικών</string>
    <string name="integb_larisa_agricultural_technicians">Συμβούλιο Ένταξης - Πρόγραμμα Σπουδών Τμήματος Τεχνολόγων Γεωπόνων</string>
    <string name="volos_architecture">Τμήμα Αρχιτεκτόνων Μηχανικών</string>
    <string name="volos_elec_computer_engineers">Τμήμα Ηλεκτρολόγων Μηχανικών και Μηχανικών Υπολογιστών</string>
    <string name="volos_spatial_engineering">Τμήμα Μηχανικών Χωροταξίας, Πολεοδομίας και Περιφερειακής Ανάπτυξης</string>
    <string name="volos_mechanical_engineering">Τμήμα Μηχανολόγων Μηχανικών</string>
    <string name="volos_civil_engineering">Τμήμα Πολιτικών Μηχανικών</string>
    <string name="volos_primary_education">Τμήμα Δημοτικής Εκπαίδευσης</string>
    <string name="volos_special_education">Τμήμα ΕΙδικής Αγωγής</string>
    <string name="volos_preschool_education">Τμήμα Προσχολικής Εκπαίδευσης</string>
    <string name="volos_linguistic_intercultural">Τμήμα Γλωσσικών και Διαπολιτισμικών Σπουδών</string>
    <string name="volos_archeology_anthropology">Τμήμα Ιστορίας Αρχαιολογίας και Κοινωνικής Ανθρωπολογίας</string>
    <string name="volos_politism_industry">Τμήμα Πολιτισμού και Δημιουργικών Μέσων και Βιομηχανιών</string>
    <string name="volos_economical_science">Τμήμα Οικονομικών Επιστημών</string>
    <string name="volos_agronomy_ichthyology">Τμήμα Γεωπονίας Ιχθυολογίας και Υδάτινου Περιβάλλοντος</string>
    <string name="volos_agriculture">Τμήμα Γεωπονίας Φυτικής Παραγωγής και Αγροτικού Περιβάλλοντος</string>
    <string name="karditsa_public_health">Τμήμα Δημόσιας και Ενιαίας Υγείας</string>
    <string name="karditsa_vet">Τμήμα Κτηνιατρικής</string>
    <string name="karditsa_forestry_wood">Τμήμα Δασολογίας, Επιστημών Ξύλου και Σχεδιασμού</string>
    <string name="karditsa_food_science">Τμήμα Επιστήμης Τροφίμων και Διατροφής</string>
    <string name="integb_karditsa_forestry_enviroment">Συμβούλιο Ένταξης - Πρόγραμμα Σπουδών Τμήματος Δασοπονίας και Διαχείρησης Φυσικού Περιβάλλοντος</string>
    <string name="integb_karditsa_diet">Συμβούλιο Ένταξης - Πρόγραμμα Σπουδών Τμήματος Διατροφής και Διαιτολογίας</string>
    <string name="integb_karditsa_wood_design">Συμβούλιο Ένταξης - Πρόγραμμα Σπουδών Τμήματος Σχεδιασμού και Τεχνολογίας Ξύλου και Επίπλου</string>
    <string name="integb_karditsa_food_science">Συμβούλιο Ένταξης - Πρόγραμμα Σπουδών Τμήματος Τεχνολογίας Τροφίμων</string>
    <string name="lamia_physical_therapy">Τμήμα Φυσικοθεραπείας</string>
    <string name="lamia_maths">Τμήμα Μαθηματικών</string>
    <string name="lamia_computer_science">Τμήμα Πληροφορικής και Τηλεπικοινωνιών</string>
    <string name="lamia_cs_biomedicine">Τμήμα Πληροφορικής - με Εφαρμογές στη Βιοϊατρική</string>
    <string name="lamia_physics">Τμήμα Φυσικής</string>
    <string name="integb_lamia_computer_engineering">Συμβούλιο Ένταξης - Πρόγραμμα Σπουδών Τμήματος Μηχανικών Πληροφορικής Τ.Ε.</string>
    <string name="integb_lamia_physical_therapy">Συμβούλιο Ένταξης - Πρόγραμμα Σπουδών Τμήματος Φυσικοθεραπείας</string>
    <string name="trikala_diet">Τμήμα Διαιτολογίας και Διατροφολογίας</string>
    <string name="trikala_physical_education_athletics">Τμήμα Επιστήμης Φυσικής Αγωγής και Αθλητισμού</string>
    <string name="integb_trikala_civil_engineering">Συμβούλιο Ένταξης - Πρόγραμμα Σπουδών Τμήματος Πολιτικών Μηχανικών Τ.Ε.</string>
    <string name="teachers">Καθηγητές</string>
    <string name="studies">Πρόγραμμα \n Σπουδών</string>
    <string name="announcements">Ανακοινώσεις</string>
    <string name="map">Χάρτης</string>
    <string name="secretary">Γραμματεία</string>
    <string name="image_list_item">image list item</string>
    <string name="larisa_biochemistry_secrcy_address">Βιόπολις, ΤΚ 41500, Λάρισα</string>
    <string name="larisa_biochemistry_secrcy_phone_number">2410 565271–2–3</string>
    <string name="larisa_biochemistry_secrcy_fax">2410 565290</string>
    <string name="larisa_biochemistry_secrcy_email">g-bio@bio.uth.gr</string>
    <string name="larisa_medicine_secrcy_address">Πανεπιστημίου 3, Βιόπολις, 41500 Λάρισα, 2ος Όροφος</string>
    <string name="larisa_medicine_secrcy_phone_number">2410 685703</string>
    <string name="larisa_medicine_secrcy_fax">2410 685546–7</string>
    <string name="larisa_medicine_secrcy_email">g-med@med.uth.gr</string>
    <string name="larisa_nursery_secrcy_address">Γαιόπολις, Πριφερειακή οδός Λάρισας - Τρικάλων</string>
    <string name="larisa_nursery_secrcy_phone_number">2410 684253</string>
    <string name="larisa_secrcy_fax_no_fax">Δεν υπάρχει</string>
    <string name="larisa_nursery_secrcy_email">g-nurs@uth.gr</string>
    <string name="larisa_business_admin_secrcy_address">Γαιόπολις, Περιφερειακή οδός Λάρισας - Τρικάλων</string>
    <string name="larisa_business_admin_secrcy_phone_number">2410 684 235</string>
    <string name="larisa_business_admin_secrcy_fax">Δεν υπάρχει</string>
    <string name="larisa_business_admin_secrcy_email">g-de@uth.gr</string>
    <string name="larisa_acc_finance_secrcy_address">Γαιόπολις, Περιφερειακή οδός Λάρισας - Τρικάλων</string>
    <string name="larisa_acc_finance_secrcy_phone_number">2410 684233</string>
    <string name="larisa_acc_finance_secrcy_fax">Δεν υπάρχει</string>
    <string name="larisa_acc_finance_secrcy_email">g-accfin@uth.gr</string>
    <string name="larisa_enviroment_secrcy_address">Γαιόπολις, Περιφερειακή οδός Λάρισας - Τρικάλων</string>
    <string name="larisa_enviroment_secrcy_phone_number">2410 684473</string>
    <string name="larisa_enviroment_secrcy_fax">2410 684306</string>
    <string name="larisa_enviroment_secrcy_email">g-env@uth.gr</string>
    <string name="larisa_energy_sys_secrcy_address">Γαιόπολις, Περιφερειακή οδός Λάρισας - Τρικάλων</string>
    <string name="larisa_energy_sys_secrcy_phone_number">2410 684254</string>
    <string name="larisa_energy_sys_secrcy_fax">2410 613249</string>
    <string name="larisa_energy_sys_secrcy_email">g-energy@uth.gr</string>
    <string name="larisa_digital_sys_secrcy_address">Γαιόπολις, Περιφερειακή οδός Λάρισας - Τρικάλων</string>
    <string name="larisa_digital_sys_secrcy_phone_number">2410 684574</string>
    <string name="larisa_digital_sys_secrcy_fax">2410 684386</string>
    <string name="larisa_digital_sys_secrcy_email">g-ds@uth.gr</string>
    <string name="larisa_agrotech_secrcy_address">Γαιόπολις, Περιφερειακή οδός Λάρισας - Τρικάλων</string>
    <string name="larisa_agrotech_secrcy_phone_number">2410 684275</string>
    <string name="larisa_agrotech_secrcy_fax">Δεν υπάρχει</string>
    <string name="larisa_agrotech_secrcy_email">g-agrtec@uth.gr</string>
    <string name="larisa_animal_prod_secrcy_address">Γαιόπολις, Περιφερειακή οδός Λάρισας - Τρικάλων</string>
    <string name="larisa_animal_prod_secrcy_phone_number">2410 684476</string>
    <string name="larisa_animal_prod_secrcy_fax">2410 610803</string>
    <string name="larisa_animal_prod_secrcy_email">g-as@uth.gr</string>
    <string name="larisa_integb_buss_admin_address">Γαιόπολις, Περιφερειακή οδός Λάρισας - Τρικάλων</string>
    <string name="larisa_integb_buss_admin_phone_number">2410 684235 \n 2410 684237</string>
    <string name="larisa_integb_buss_admin_fax">Δεν υπάρχει</string>
    <string name="larisa_integb_buss_admin_email">ps-business@uth.gr \n olgavolioti@uth.gr</string>
    <string name="larisa_integb_elec_engi_address">Γαιόπολις, Περιφερειακή οδός Λάρισας - Τρικάλων</string>
    <string name="larisa_integb_elec_engi_phone_number">2410 684254</string>
    <string name="larisa_integb_elec_engi_fax">2410 613249</string>
    <string name="larisa_integb_elec_engi_email">ps-electr@uth.gr</string>
    <string name="larisa_integb_medical_labs_address">Γαιόπολις, Περιφερειακή οδός Λάρισας - Τρικάλων</string>
    <string name="larisa_integb_medical_labs_phone_number">2410 684454</string>
    <string name="larisa_integb_medical_labs_fax">2410 613986</string>
    <string name="larisa_integb_medical_labs_email">secry-medlab@teilar.gr</string>
    <string name="larisa_integb_logistics_address">Γαιόπολις, Περιφερειακή οδός Λάρισας - Τρικάλων</string>
    <string name="larisa_integb_logistics_phone_number">2410 684233</string>
    <string name="larisa_integb_logistics_fax">Δεν υπάρχει</string>
    <string name="larisa_integb_logistics_email">g-accfin@uth.gr</string>
    <string name="larisa_integb_cs_address">Γαιόπολις, Περιφερειακή οδός Λάρισας - Τρικάλων</string>
    <string name="larisa_integb_cs_phone_number">2410 684574, 2410 684387,\n2410 684485</string>
    <string name="larisa_integb_cs_fax">2410 684386</string>
    <string name="larisa_integb_cs_email">secry-cs@teilar.gr</string>
    <string name="larisa_integb_mech_engin_address">Γαιόπολις, Περιφερειακή οδός Λάρισας - Τρικάλων</string>
    <string name="larisa_integb_mech_engin_phone_number">2410 684301</string>
    <string name="larisa_integb_mech_engin_fax">2410 613249</string>
    <string name="larisa_integb_mech_engin_email">ps-engin@uth.gr</string>
    <string name="larisa_integb_nursery_address">Γαιόπολις, Περιφερειακή οδός Λάρισας - Τρικάλων</string>
    <string name="larisa_integb_nursery_phone_number">2410 684252</string>
    <string name="larisa_integb_nursery_fax">2410 684688</string>
    <string name="larisa_integb_nursery_email">secry-nurse@teilar.gr</string>
    <string name="larisa_integb_civil_engin_address">Γαιόπολις, Περιφερειακή οδός Λάρισας - Τρικάλων</string>
    <string name="larisa_integb_civil_engin_phone_number">2410 684527, 2410 684304,\n2410684473</string>
    <string name="larisa_integb_civil_engin_fax">2410 684306</string>
    <string name="larisa_integb_civil_engin_email">secry-civil@teilar.gr</string>
    <string name="larisa_integb_agricultural_address">Γαιόπολις, Περιφερειακή οδός Λάρισας - Τρικάλων</string>
</resources>